unix/lang/tests/error/explicit_error_within_if.yab
if (2>1) error "World"
